fix(i18n-zh): Correct typos and semantic inaccuracies in the zh-CN translation

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,7 +1,7 @@
 {
   "credentials": {
     "credentialsViewer": "凭证查看器",
-    "manageYourSSHCredentials": "安全地管理您的 SSH 凭据",
+    "manageYourSSHCredentials": "安全地管理您的 SSH 凭证",
     "addCredential": "添加凭证",
     "createCredential": "创建凭证",
     "editCredential": "编辑凭证",
@@ -120,8 +120,8 @@
     "keyAuthentication": "密钥认证",
     "securityReminder": "安全提醒",
     "securityReminderText": "切勿泄露您的登录凭证。所有数据在存储时均已加密。",
-    "hostsUsingCredential": "使用此凭据的主机",
-    "noHostsUsingCredential": "目前没有主机使用此凭据",
+    "hostsUsingCredential": "使用此凭证的主机",
+    "noHostsUsingCredential": "目前没有主机使用此凭证",
     "timesUsed": "使用次数",
     "lastUsed": "上次使用",
     "connectedHosts": "已连接主机",
@@ -131,18 +131,18 @@
     "copiedToClipboard": "{{field}} 已复制到剪贴板",
     "failedToCopy": "复制到剪贴板失败",
     "sshKey": "SSH密钥",
-    "createCredentialDescription": "创建新的 SSH 凭据以实现安全访问",
+    "createCredentialDescription": "创建新的 SSH 凭证以实现安全访问",
     "editCredentialDescription": "更新凭证信息",
     "listView": "列表",
     "folderView": "文件夹",
     "unknownCredential": "未知",
-    "confirmRemoveFromFolder": "您确定要从文件夹“{{folder}}”中删除“{{name}}”吗？凭据将被移动到“未分类”文件夹。",
+    "confirmRemoveFromFolder": "您确定要从文件夹“{{folder}}”中删除“{{name}}”吗？凭证将被移动到“未分类”文件夹。",
     "removedFromFolder": "已成功从文件夹中移除凭证“{{name}}”。",
-    "failedToRemoveFromFolder": "无法从文件夹中删除凭据",
+    "failedToRemoveFromFolder": "无法从文件夹中删除凭证",
     "folderRenamed": "文件夹“{{oldName}}”已成功重命名为“{{newName}}”。",
     "failedToRenameFolder": "文件夹重命名失败",
     "movedToFolder": "凭证“{{name}}”已成功移至“{{folder}}”。",
-    "failedToMoveToFolder": "无法将凭据移动到文件夹",
+    "failedToMoveToFolder": "无法将凭证移动到文件夹",
     "sshPublicKey": "SSH 公钥",
     "publicKeyNote": "公钥是可选的，但建议用于密钥验证。",
     "publicKeyUploaded": "公钥已上传",
@@ -174,7 +174,7 @@
     "removing": "移除：",
     "clickToEditCredential": "点击编辑凭证",
     "dragToMoveBetweenFolders": "拖动即可在文件夹之间移动。",
-    "keyBasedOnlyForDeployment": "仅可部署基于 SSH 密钥的凭据。",
+    "keyBasedOnlyForDeployment": "仅可部署基于 SSH 密钥的凭证。",
     "publicKeyRequiredForDeployment": "部署需要公钥",
     "selectTargetHost": "请选择目标主机",
     "keyDeployedSuccessfully": "SSH密钥已成功部署",
@@ -579,7 +579,7 @@
     "administratorRole": "管理员角色",
     "administratorRoleDescription": "授予完整的系统访问权与管理权限",
     "passwordManagement": "密码管理",
-    "passwordResetWarning": "重置用户密码会删除其所有数据（SSH 主机、凭据、设置）。此操作无法撤销。",
+    "passwordResetWarning": "重置用户密码会删除其所有数据（SSH 主机、凭证、设置）。此操作无法撤销。",
     "resetUserPassword": "重置用户密码",
     "resettingPassword": "正在重置……",
     "passwordResetInitiated": "已对 {{username}} 发起密码重置。已发送重置码。",
@@ -637,7 +637,7 @@
     "enableAes256EncryptionWithDeviceBinding": "启用基于环境的主密钥保护的 AES-256 加密。这可为 SSH 密钥、密码和身份验证令牌创建企业级安全保障。",
     "featuresEnabled": "已启用功能：",
     "aes256GcmAuthenticatedEncryption": "AES-256-GCM 认证加密",
-    "deviceFingerprintMasterKeyProtection": "环境指纹主钥匙保护（KEK）",
+    "deviceFingerprintMasterKeyProtection": "环境指纹主密钥保护（KEK）",
     "pbkdf2KeyDerivation": "使用 10 万次迭代的 PBKDF2 密钥派生",
     "automaticKeyManagement": "密钥自动管理与轮换",
     "initializing": "正在初始化...",
@@ -716,7 +716,7 @@
     "crossSystemDataTransfer": "在不同系统间导出和导入数据库",
     "noMigrationNeeded": "无需迁移",
     "encryptionKey": "加密密钥",
-    "keyProtection": "钥匙保护",
+    "keyProtection": "密钥保护",
     "active": "操作",
     "legacy": "遗产",
     "dataStatus": "数据状态",
@@ -734,7 +734,7 @@
     "import": "导入",
     "passwordRequired": "需要密码",
     "confirmExport": "确认导出",
-    "exportDescription": "将 SSH 主机和凭据导出为 SQLite 文件",
+    "exportDescription": "将 SSH 主机和凭证导出为 SQLite 文件",
     "importDescription": "使用增量合并导入 SQLite 文件（跳过重复项）",
     "criticalWarning": "严重警告",
     "cannotDisablePasswordLoginWithoutOIDC": "未配置 OIDC 时无法禁用密码登录！您必须先配置 OIDC 身份验证，才能禁用密码登录，否则您将失去对 Termix 的访问权限。",
@@ -784,7 +784,7 @@
     "importJsonDesc": "上传 JSON 文件以批量导入多个 SSH 主机（最多 100 个）。",
     "downloadSample": "下载示例",
     "formatGuide": "格式指南",
-    "exportCredentialWarning": "警告：主机“{{name}}”使用凭据身份验证。导出的文件将不包含凭据数据，导入后需要手动重新配置。是否继续？",
+    "exportCredentialWarning": "警告：主机“{{name}}”使用凭证身份验证。导出的文件将不包含凭证数据，导入后需要手动重新配置。是否继续？",
     "exportSensitiveDataWarning": "警告：主机“{{name}}”包含敏感的身份验证数据（密码/SSH密钥）。导出的文件将以明文形式包含这些数据。请妥善保管该文件，并在使用后将其删除。是否继续？",
     "uncategorized": "未分类",
     "confirmDelete": "您确定要删除“{{name}}”吗？",
@@ -890,7 +890,7 @@
     "updateKey": "更新密钥",
     "existingKey": "现有密钥（点击更改）",
     "existingCredential": "现有凭证（点击更改）",
-    "addTagsSpaceToAdd": "添加标签（此处留空）",
+    "addTagsSpaceToAdd": "添加标签（空格添加）",
     "terminalBadge": "终端",
     "tunnelBadge": "隧道",
     "fileManagerBadge": "文件管理器",
@@ -1035,11 +1035,11 @@
     "snippetNone": "None",
     "noneAuthTitle": "键盘交互认证",
     "noneAuthDescription": "连接到 SSH 服务器时，此身份验证方法将使用键盘交互式身份验证。",
-    "noneAuthDetails": "键盘交互式身份验证允许服务器在连接过程中提示您输入凭据。这对于需要多因素身份验证的服务器或您不想在本地保存凭据的情况非常有用。",
+    "noneAuthDetails": "键盘交互式身份验证允许服务器在连接过程中提示您输入凭证。这对于需要多因素身份验证的服务器或您不想在本地保存凭证的情况非常有用。",
     "forceKeyboardInteractive": "强制键盘交互",
     "forceKeyboardInteractiveDesc": "强制使用键盘交互式身份验证。对于使用双因素身份验证（TOTP/2FA）的服务器，有时需要这样做。",
-    "overrideCredentialUsername": "覆盖凭据用户名",
-    "overrideCredentialUsernameDesc": "使用与凭据中存储的用户名不同的用户名。这样，您就可以使用不同的用户名登录同一个凭据。",
+    "overrideCredentialUsername": "覆盖凭证用户名",
+    "overrideCredentialUsernameDesc": "使用与凭证中存储的用户名不同的用户名。这样，您就可以使用不同的用户名登录同一个凭证。",
     "jumpHosts": "跳板主机",
     "jumpHostsDescription": "跳转主机（也称为堡垒主机）允许您通过一个或多个中间服务器连接到目标服务器。这对于访问防火墙后或专用网络中的服务器非常有用。",
     "jumpHostChain": "跳转宿主链",
@@ -1745,7 +1745,7 @@
     "sshNoKeyboardInteractiveDescription": "服务器不支持键盘交互认证。请提供你的密码或 SSH 密钥。",
     "sshAuthFailedDescription": "提供的凭证无效。请使用有效的凭证重试。",
     "sshTimeoutDescription": "身份验证尝试超时，请重试。",
-    "sshProvideCredentialsDescription": "请提供您的 SSH 凭据以连接到此服务器。",
+    "sshProvideCredentialsDescription": "请提供您的 SSH 凭证以连接到此服务器。",
     "sshPasswordDescription": "请输入此SSH连接的密码。",
     "sshKeyPasswordDescription": "如果您的 SSH 密钥已加密，请在此处输入密码。",
     "step1ScanQR": "步骤 1：使用您的身份验证器应用程序扫描二维码",
@@ -1788,7 +1788,7 @@
     "loggingInToDesktopAppViaWeb": "通过网页界面登录桌面应用程序",
     "loadingServer": "正在加载服务器...",
     "authenticating": "正在验证身份...",
-    "dataLossWarning": "使用此方法重置密码将删除您保存的所有 SSH 主机、凭据和其他加密数据。此操作无法撤销。仅当您忘记密码且未登录时才使用此方法。",
+    "dataLossWarning": "使用此方法重置密码将删除您保存的所有 SSH 主机、凭证和其他加密数据。此操作无法撤销。仅当您忘记密码且未登录时才使用此方法。",
     "authenticationDisabled": "身份验证已禁用",
     "authenticationDisabledDesc": "所有身份验证方式目前均已禁用。请联系您的管理员。",
     "passwordResetSuccess": "密码重置成功",
@@ -2173,7 +2173,7 @@
     "failedToFetchAccessList": "获取访问列表失败",
     "currentAccess": "当前访问权限",
     "securityWarning": "安全警告",
-    "securityWarningMessage": "共享凭据将赋予用户对服务器的完全访问权限，可以执行任何操作，包括更改密码和删除文件。请仅与受信任的用户共享凭据。",
+    "securityWarningMessage": "共享凭证将赋予用户对服务器的完全访问权限，可以执行任何操作，包括更改密码和删除文件。请仅与受信任的用户共享凭证。",
     "tempUserRecommended": "为了提高安全性，我们建议启用“创建临时用户”功能。",
     "roleManagement": "角色管理",
     "manageRoles": "管理角色",
@@ -2192,8 +2192,8 @@
     "cannotShareWithSelf": "无法将主机共享给自己",
     "noCustomRolesToAssign": "暂无可用的自定义角色。系统角色为自动分配。",
     "credentialSharingWarning": "共享功能不支持凭证认证",
-    "credentialRequired": "共享主机时需要凭据",
-    "credentialRequiredDescription": "此主机未使用基于凭据的身份验证。由于需要对每个用户进行加密，因此要共享主机，主机必须使用基于凭证的身份验证。",
+    "credentialRequired": "共享主机时需要凭证",
+    "credentialRequiredDescription": "此主机未使用基于凭证的身份验证。由于需要对每个用户进行加密，因此要共享主机，主机必须使用基于凭证的身份验证。",
     "auditLogs": "审计日志",
     "viewAuditLogs": "查看审计日志",
     "action": "操作",
