feat: add option to disable update checker
Add a new setting in User Profile > Settings to disable automatic
update checking on startup and dashboard.

- Adds 'Disable Update Check' toggle in profile settings
- Skips GitHub API calls when disabled (reduces network requests)
- Works for both web app and Electron client

Fixes Termix-SSH/Support#410

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1882,6 +1882,9 @@
     "terminalSettings": "终端",
     "hostSidebarSettings": "主机和侧边栏",
     "snippetsSettings": "片段",
+    "updateSettings": "更新",
+    "disableUpdateCheck": "禁用更新检查",
+    "disableUpdateCheckDesc": "停止在启动和仪表板上检查新版本，减少网络请求。",
     "currentPassword": "当前密码",
     "passwordChangedSuccess": "密码已成功更改！请重新登录。",
     "failedToChangePassword": "密码更改失败。请检查您当前的密码并重试。",
