feat: add option to disable update checker (#502)
* feat: add option to disable update checker

Add a new setting in User Profile > Settings to disable automatic
update checking on startup and dashboard.

- Adds 'Disable Update Check' toggle in profile settings
- Skips GitHub API calls when disabled (reduces network requests)
- Works for both web app and Electron client

Fixes Termix-SSH/Support#410

* feat: remove locales

---------

Co-authored-by: LukeGus <bugattiguy527@gmail.com>

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1958,6 +1958,9 @@
     "terminalSettings": "Terminal",
     "hostSidebarSettings": "Host & Sidebar",
     "snippetsSettings": "Snippets",
+    "updateSettings": "Updates",
+    "disableUpdateCheck": "Disable Update Check",
+    "disableUpdateCheckDesc": "Stop checking for new versions on startup and dashboard. Reduces network requests.",
     "currentPassword": "Current Password",
     "passwordChangedSuccess": "Password changed successfully! Please log in again.",
     "failedToChangePassword": "Failed to change password. Please check your current password and try again.",
