feat: update credential editor to use submitting system and add health monitor

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,6 +44,8 @@
     "passwordRequired": "Password is required",
     "sshKeyRequired": "SSH key is required",
     "credentialAddedSuccessfully": "Credential \"{{name}}\" added successfully",
+    "savingCredential": "Saving credential...",
+    "updatingCredential": "Updating credential...",
     "general": "General",
     "description": "Description",
     "folder": "Folder",
