feat: added sidebar management and improved some host manager UI/UX

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1108,6 +1108,19 @@
     "quickActionName": "Action name",
     "noSnippetFound": "No snippet found",
     "quickActionsOrder": "Quick action buttons will appear in the order listed above on the Server Stats page",
+    "sidebarCustomization": "Sidebar Button Customization",
+    "sidebarCustomizationDesc": "Choose which actions appear as quick buttons in the sidebar. Actions not shown as buttons will appear in the dropdown menu.",
+    "showTerminalInSidebar": "Show Terminal Button",
+    "showTerminalInSidebarDesc": "Display terminal as a quick button in the sidebar",
+    "showFileManagerInSidebar": "Show File Manager Button",
+    "showFileManagerInSidebarDesc": "Display file manager as a quick button in the sidebar",
+    "showTunnelInSidebar": "Show Tunnel Button",
+    "showTunnelInSidebarDesc": "Display tunnel management as a quick button in the sidebar",
+    "showDockerInSidebar": "Show Docker Button",
+    "showDockerInSidebarDesc": "Display docker management as a quick button in the sidebar",
+    "showServerStatsInSidebar": "Show Server Stats Button",
+    "showServerStatsInSidebarDesc": "Display server statistics as a quick button in the sidebar",
+    "atLeastOneActionRequired": "At least one enabled action must be shown in the sidebar",
     "advancedAuthSettings": "Advanced Authentication Settings",
     "sudoPasswordAutoFill": "Sudo Password Auto-Fill",
     "sudoPasswordAutoFillDesc": "Automatically offer to insert SSH password when sudo prompts for password",
