--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1375,6 +1375,11 @@
     "itemDeletedSuccessfully": "{{type}} deleted successfully",
     "itemsDeletedSuccessfully": "{{count}} items deleted successfully",
     "failedToDeleteItems": "Failed to delete items",
+    "sudoPasswordRequired": "Administrator Password Required",
+    "enterSudoPassword": "Enter sudo password to continue this operation",
+    "sudoPassword": "Sudo password",
+    "sudoOperationFailed": "Sudo operation failed",
+    "deleteOperation": "Delete files/folders",
     "dragFilesToUpload": "Drop files here to upload",
     "emptyFolder": "This folder is empty",
     "itemCount": "{{count}} items",
