fix: add sudo support for listFiles and improve permission error handling

--- a/src/locales/translated/en.json
+++ b/src/locales/translated/en.json
@@ -1371,6 +1371,10 @@
     "downloadSuccess": "File downloaded successfully",
     "downloadFailed": "File download failed",
     "permissionDenied": "Permission denied",
+    "sudoAuthFailed": "Sudo authentication failed. Please check your password.",
+    "accessDirectory": "access this directory",
+    "deleteOperation": "delete these items",
+    "sudoOperationFailed": "Sudo operation failed",
     "checkDockerLogs": "Check the Docker logs for detailed error information",
     "internalServerError": "Internal server error occurred",
     "serverError": "Server Error",
