--- a/src/locales/translated/zh.json
+++ b/src/locales/translated/zh.json
@@ -1370,7 +1370,11 @@
     "uploadFailed": "文件上傳失敗",
     "downloadSuccess": "文件下載成功",
     "downloadFailed": "文件下載失敗",
-    "permissionDenied": "沒有權限",
+    "permissionDenied": "没有权限",
+    "sudoAuthFailed": "Sudo 认证失败，请检查密码",
+    "accessDirectory": "访问此目录",
+    "deleteOperation": "删除这些项目",
+    "sudoOperationFailed": "Sudo 操作失败",
     "checkDockerLogs": "查看 Docker 日誌以取得詳細的錯誤訊息",
     "internalServerError": "發生內部伺服器錯誤",
     "serverError": "伺服器錯誤",
