feat: added quick connection system (ad-hoc)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -186,6 +186,32 @@
     "renameFolder": "Rename folder",
     "idLabel": "ID:"
   },
+  "quickConnect": {
+    "title": "Quick Connect",
+    "description": "Connect directly to a terminal or file manager session without saving a host configuration",
+    "ipAddress": "IP Address or Hostname",
+    "port": "Port",
+    "username": "Username",
+    "password": "Password",
+    "key": "SSH Private Key",
+    "keyPassword": "Key Password (Optional)",
+    "keyType": "Key Type",
+    "uploadFile": "Upload File",
+    "pasteKey": "Paste Key",
+    "credential": "Credential",
+    "overrideUsername": "Override Credential Username",
+    "overrideUsernameDesc": "Use a different username than the one stored in the credential",
+    "connectTerminal": "Connect to Terminal",
+    "connectFileManager": "Connect to File Manager",
+    "cancel": "Cancel",
+    "passwordRequired": "Password is required",
+    "keyRequired": "SSH key is required",
+    "credentialRequired": "Credential selection is required",
+    "connectionEstablished": "Connection established successfully",
+    "connectionFailed": "Failed to establish connection",
+    "autoDetect": "Auto Detect",
+    "authentication": "Authentication"
+  },
   "dragIndicator": {
     "error": "Error: {{error}}",
     "dragging": "Dragging {{fileName}}",
