feat: improved full screen apps, overhauled dashboard, updated server stats ui, etc.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -415,6 +415,7 @@
     "sshPath": "SSH Path",
     "localPath": "Local Path",
     "appName": "Termix",
+    "openInNewTab": "Open in New Tab",
     "resetSidebarWidth": "Reset sidebar width",
     "dragToResizeSidebar": "Drag to resize sidebar",
     "noAuthCredentials": "No authentication credentials available for this SSH host",
@@ -1180,6 +1181,14 @@
     "addVariable": "Add Variable",
     "docker": "Docker",
     "openDocker": "Open Docker",
+    "copyFullScreenUrl": "Copy Full-Screen URL",
+    "fullScreenUrlCopied": "Full-screen URL copied to clipboard",
+    "copyTerminalUrl": "Copy Terminal URL",
+    "copyFileManagerUrl": "Copy File Manager URL",
+    "copyTunnelUrl": "Copy Tunnel URL",
+    "copyServerStatsUrl": "Copy Server Stats URL",
+    "copyDockerUrl": "Copy Docker URL",
+    "fullScreenUrlTooltip": "Copy URL to open this app in full-screen mode",
     "notEnabled": "Docker is not enabled for this host. Enable it in Host Settings to use Docker features.",
     "validating": "Validating Docker...",
     "error": "Error",
@@ -2265,9 +2274,6 @@
     "customizeLayout": "Customize Dashboard",
     "dashboardSettings": "Dashboard Settings",
     "enableDisableCards": "Enable/Disable Cards",
-    "gridColumns": "Grid Columns",
-    "column": "Column",
-    "columns": "Columns",
     "resetLayout": "Reset to Default",
     "serverOverviewCard": "Server Overview",
     "recentActivityCard": "Recent Activity",
