--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -497,7 +497,8 @@
     "actions": "Actions",
     "remove": "Remove",
     "revoke": "Revoke",
-    "create": "Create"
+    "create": "Create",
+    "update": "Update"
   },
   "nav": {
     "home": "Home",
@@ -2278,9 +2279,80 @@
     "serverOverviewCard": "Server Overview",
     "recentActivityCard": "Recent Activity",
     "networkGraphCard": "Network Graph",
+    "networkGraph": "Network Graph",
     "quickActionsCard": "Quick Actions",
-    "serverStatsCard": "Server Stats",
-    "networkGraph": "Network Graph"
+    "serverStatsCard": "Server Stats"
+  },
+  "networkGraph": {
+    "title": "Network Graph",
+    "addHost": "Add Host",
+    "addGroup": "Add Group",
+    "addLink": "Add Link",
+    "deleteSelected": "Delete Selected",
+    "zoomIn": "Zoom In",
+    "zoomOut": "Zoom Out",
+    "resetView": "Reset View",
+    "exportJson": "Export JSON",
+    "importJson": "Import JSON",
+    "selectHost": "Select Host",
+    "chooseHost": "Choose a host...",
+    "parentGroup": "Parent Group",
+    "noGroup": "No Group",
+    "groupName": "Group Name",
+    "color": "Color",
+    "source": "Source",
+    "target": "Target",
+    "moveToGroup": "Move to Group",
+    "selectGroup": "Select group...",
+    "addConnection": "Add Connection",
+    "hostDetails": "Host Details",
+    "connectToHost": "Connect to Host",
+    "openTerminal": "Open Terminal",
+    "openFileManager": "Open File Manager",
+    "openTunnel": "Open Tunnels",
+    "openDocker": "Open Docker",
+    "openServerStats": "Open Server Details",
+    "moveToGroupAction": "Move to Group",
+    "removeFromGroup": "Remove from Group",
+    "addHostHere": "Add Host Here",
+    "editGroup": "Edit Group",
+    "delete": "Delete",
+    "cancel": "Cancel",
+    "add": "Add",
+    "create": "Create",
+    "update": "Update",
+    "move": "Move",
+    "connect": "Connect",
+    "close": "Close",
+    "createGroup": "Create Group",
+    "noAvailableHosts": "No available hosts",
+    "selectSourcePlaceholder": "Select Source...",
+    "selectTargetPlaceholder": "Select Target...",
+    "invalidFile": "Invalid File",
+    "hostAlreadyExists": "Host is already in the topology",
+    "sourceTargetMustDiffer": "Source and target must be different",
+    "connectionExists": "Connection already exists",
+    "unknown": "Unknown",
+    "name": "Name",
+    "ip": "IP",
+    "status": "Status",
+    "id": "ID",
+    "failedToLoadData": "Failed to load network topology data",
+    "failedToAddNode": "Failed to add node",
+    "sourceDifferentFromTarget": "Source and target must be different",
+    "exportJSON": "Export JSON",
+    "importJSON": "Import JSON",
+    "searchHost": "Search hosts...",
+    "noHostFound": "No hosts found",
+    "searchGroup": "Search groups...",
+    "noGroupFound": "No groups found",
+    "searchNode": "Search nodes...",
+    "noNodeFound": "No nodes found",
+    "terminal": "Terminal",
+    "fileManager": "File Manager",
+    "tunnel": "Tunnel",
+    "docker": "Docker",
+    "serverStats": "Server Stats"
   },
   "rbac": {
     "shareHost": "Share Host",
