feat: add warpgate support with a dialog (terminal only)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1339,6 +1339,12 @@
     "totpCodeLabel": "Verification Code",
     "totpPlaceholder": "000000",
     "totpVerify": "Verify",
+    "warpgateAuthRequired": "Warpgate Authentication Required",
+    "warpgateSecurityKey": "Security Key",
+    "warpgateAuthUrl": "Authentication URL",
+    "warpgateOpenBrowser": "Open in Browser",
+    "warpgateContinue": "I've Completed Authentication",
+    "warpgateTimeout": "Warpgate authentication timeout. Please reconnect.",
     "sudoPasswordPopupTitle": "Insert Password?",
     "sudoPasswordPopupHint": "Press Enter to insert, Esc to dismiss",
     "sudoPasswordPopupConfirm": "Insert",
