feat: expand warpgate to docker/file manager

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1643,6 +1643,7 @@
     "loadFileFailed": "Failed to load file: {{error}}",
     "connectedSuccessfully": "Connected successfully",
     "totpVerificationFailed": "TOTP verification failed",
+    "warpgateVerificationFailed": "Warpgate authentication failed",
     "sshConnectionFailed": "SSH connection failed. Please check your connection to {{name}} ({{ip}}:{{port}})",
     "verificationCodePrompt": "Verification code:",
     "newFolderDefault": "NewFolder",
@@ -2617,6 +2618,7 @@
     "authenticationRequired": "Authentication required",
     "verificationCodePrompt": "Enter verification code",
     "totpVerificationFailed": "TOTP verification failed. Please try again.",
+    "warpgateVerificationFailed": "Warpgate authentication failed. Please try again.",
     "connectedTo": "Connected to {{containerName}}",
     "disconnected": "Disconnected",
     "consoleError": "Console error",
