feat: make terminal connections more resilient, added connection log, and fixed https/proxy reconnection loop (issue #385)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1348,7 +1348,25 @@
     "sudoPasswordPopupTitle": "Insert Password?",
     "sudoPasswordPopupHint": "Press Enter to insert, Esc to dismiss",
     "sudoPasswordPopupConfirm": "Insert",
-    "sudoPasswordPopupDismiss": "Dismiss"
+    "sudoPasswordPopupDismiss": "Dismiss",
+    "websocketAbnormalClose": "Connection closed unexpectedly. This may be due to a reverse proxy or SSL configuration issue. Please check server logs.",
+    "totpAttemptsRemaining": "{{count}} attempt(s) remaining",
+    "totpInvalid": "Invalid code. Please try again.",
+    "authMethodFallback": "{{method}} authentication failed. Trying alternative method...",
+    "allAuthMethodsFailed": "All authentication methods failed. Please check your credentials.",
+    "connectionLogTitle": "Connection Logs",
+    "connectionLogClear": "Clear Logs",
+    "connectionLogCopy": "Copy Logs",
+    "connectionLogExpand": "Show Connection Logs",
+    "connectionLogCollapse": "Hide Connection Logs",
+    "connectionLogCopied": "Logs copied to clipboard",
+    "connectionLogCopyFailed": "Failed to copy logs to clipboard",
+    "connectionLogEmpty": "No connection logs yet",
+    "methodNotSupported": "Server does not support {{method}} authentication. Available methods: {{available}}",
+    "retryWithMethod": "Retry with {{method}}",
+    "automaticFallback": "Automatically trying {{method}} authentication...",
+    "totpTimeout": "TOTP verification timeout. Please reconnect.",
+    "passwordTimeout": "Password verification timeout. Please reconnect."
   },
   "fileManager": {
     "title": "File Manager",
