feat: improved conneciton log ui/logic

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -907,13 +907,16 @@
     "or": "or",
     "centosRhelFedora": "CentOS/RHEL/Fedora",
     "macos": "macOS",
-    "windows": "Windows",
+    "windows": "Windows (WSL, no official binary)",
     "sshServerConfigRequired": "SSH Server Configuration Required",
     "sshServerConfigDesc": "For tunnel connections, the SSH server must be configured to allow port forwarding:",
     "gatewayPortsYes": "to bind remote ports to all interfaces",
     "allowTcpForwardingYes": "to enable port forwarding",
     "permitRootLoginYes": "if using root user for tunneling",
-    "editSshConfig": "Edit /etc/ssh/sshd_config and restart SSH: sudo systemctl restart sshd",
+    "editSshConfig": "Edit the SSH configuration file:",
+    "sshConfigPath": "/etc/ssh/sshd_config",
+    "restartSshService": "Then restart the SSH service:",
+    "restartSshCommand": "sudo systemctl restart sshd",
     "upload": "Upload",
     "authentication": "Authentication",
     "password": "Password",
@@ -1353,20 +1356,20 @@
     "totpAttemptsRemaining": "{{count}} attempt(s) remaining",
     "totpInvalid": "Invalid code. Please try again.",
     "authMethodFallback": "{{method}} authentication failed. Trying alternative method...",
-    "allAuthMethodsFailed": "All authentication methods failed. Please check your credentials.",
-    "connectionLogTitle": "Connection Logs",
-    "connectionLogClear": "Clear Logs",
-    "connectionLogCopy": "Copy Logs",
-    "connectionLogExpand": "Show Connection Logs",
-    "connectionLogCollapse": "Hide Connection Logs",
-    "connectionLogCopied": "Logs copied to clipboard",
-    "connectionLogCopyFailed": "Failed to copy logs to clipboard",
+    "authenticationRequired": "Authentication required",
+    "connectionLogTitle": "Connection Log",
+    "connectionLogCopy": "Copy logs to clipboard",
+    "connectionLogClear": "Clear logs",
     "connectionLogEmpty": "No connection logs yet",
+    "connectionLogCopied": "Connection logs copied to clipboard",
+    "connectionLogCopyFailed": "Failed to copy logs to clipboard",
+    "allAuthMethodsFailed": "All authentication methods failed. Please check your credentials.",
     "methodNotSupported": "Server does not support {{method}} authentication. Available methods: {{available}}",
     "retryWithMethod": "Retry with {{method}}",
     "automaticFallback": "Automatically trying {{method}} authentication...",
     "totpTimeout": "TOTP verification timeout. Please reconnect.",
-    "passwordTimeout": "Password verification timeout. Please reconnect."
+    "passwordTimeout": "Password verification timeout. Please reconnect.",
+    "connectionRejected": "Connection rejected by server. Please check your authentication and network configuration."
   },
   "fileManager": {
     "title": "File Manager",
